--- a/Grand.Services/Grand.Services.csproj
+++ b/Grand.Services/Grand.Services.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="7.13.1" />
     <PackageReference Include="MailKit" Version="2.1.5.1" />
     <PackageReference Include="MaxMind.GeoIP2" Version="3.0.0" />
+    <PackageReference Include="shortid" Version="2.0.0" />
     <PackageReference Include="System.ServiceModel.Duplex" Version="4.5.3" />
     <PackageReference Include="System.ServiceModel.Http" Version="4.5.3" />
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.5.3" />
