--- a/Grand.Web/App_Data/appsettings.json
+++ b/Grand.Web/App_Data/appsettings.json
@@ -2,14 +2,14 @@
   "Hosting": {
     //Set to "true" the settings below if your hosting uses a load balancer. It'll be used to determine whether the current request is HTTPS
     "UseHttpClusterHttps": false,
-    "UseHttpXForwardedProto": false,
+    "UseHttpXForwardedProto": true,
 
     //Use the setting below if your hosting doesn't use "X-FORWARDED-FOR" header to determine IP address.
     //In some cases server use other HTTP header. You can specify a custom HTTP header here. For example, CF-Connecting-IP, X-FORWARDED-PROTO, etc
     "ForwardedHttpHeader": "",
 
     //Use a reverse proxy server - more information you can find at: https://docs.microsoft.com/en-US/aspnet/core/host-and-deploy/linux-nginx?view=aspnetcore-2.1
-    "UseForwardedHeaders": false
+    "UseForwardedHeaders": true
   },
 
   "Grand": {
