--- a/Plugins/Grand.Plugin.ExternalSystem.California/Grand.Plugin.ExternalSystem.California.csproj
+++ b/Plugins/Grand.Plugin.ExternalSystem.California/Grand.Plugin.ExternalSystem.California.csproj
@@ -43,4 +43,8 @@
     </None>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;$(OutDir)..\bin\&quot;" />
+  </Target>
+
 </Project>
