--- a/Grand.Web/App_Data/appsettings.json
+++ b/Grand.Web/App_Data/appsettings.json
@@ -99,7 +99,7 @@
     "ClearPluginShadowDirectoryOnStartup": true,
 
     //Allow to recompiling views on file change
-    "AllowRecompilingViewsOnFileChange": false,
+    "AllowRecompilingViewsOnFileChange": true,
 
     //Indicates whether to ignore InstallUrlMiddleware
     "IgnoreInstallUrlMiddleware": false,
